--- a/HTMLTable.html
+++ b/HTMLTable.html
@@ -37,10 +37,23 @@
 			<td>Baz Luhrmann</td>
 			<td>143 Minutes</td>
 		</tr>
-		<td>Man On Fire</td>
-		<td>2004</td>
-		<td></td>
+		<tr>
+			<td>Man On Fire</td>
+			<td>2004</td>
+			<td>action,crime,drama,thriller</td>
+			<td>Tony Scott</td>
+			<td>146 minutes</td>
+		</tr>
+		<tr>
+			<td>Girls Trip</td>
+			<td>2017</td>
+			<td>comedy, drama</td>
+			<td>Malcolm D. Lee</td>
+			<td>122 Minutes</td>
+		</tr>
 	</tbody>
 </table>
 </body>
 </html>
+
+		
